--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- DEVELOPER: Carlos Barrientos, IS117-xxx, Fall 2025 -->
+  <!-- DEVELOPER: Carlos Barrientos, IS117-001, Fall 2025 -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
