--- a/projects.html
+++ b/projects.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Projects | Carlos Barrientos</title>
     <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-  crossorigin="anonymous"
-/>
-<link rel="stylesheet" href="css/style.css" />
-
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="d-flex flex-column min-vh-100 bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -72,18 +71,20 @@
         </header>
 
         <div class="row g-4">
+
+          <!-- Project 1 -->
           <div class="col-md-4">
             <div class="card h-100">
               <img
-                src="images/profile.jpg"
+                src="images/IT-project-1.jpg"
                 class="card-img-top img-fluid"
-                alt="Screenshot of portfolio project"
+                alt="Computer science infographic"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Personal Portfolio Site</h5>
+                <h5 class="card-title">Personal Portfolio Website</h5>
                 <p class="card-text">
-                  A responsive portfolio built with HTML, CSS, and Bootstrap. Includes multiple
-                  pages, cards, and a contact form.
+                  A complete responsive portfolio site built with HTML, CSS, and Bootstrap.
+                  Includes multiple pages, navigation with dropdowns, cards, and a contact form.
                 </p>
                 <a
                   href="https://github.com/cmb84"
@@ -97,18 +98,19 @@
             </div>
           </div>
 
+          <!-- Project 2 -->
           <div class="col-md-4">
             <div class="card h-100">
               <img
-                src="images/profile.jpg"
+                src="images/IT-project-2.webp"
                 class="card-img-top img-fluid"
-                alt="Illustration of class project"
+                alt="Rube Goldberg style engineering drawing"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Class Projects</h5>
+                <h5 class="card-title">Engineering & Automation Concepts</h5>
                 <p class="card-text">
-                  Coursework projects involving web development, security, and IT fundamentals,
-                  using tools like Git and GitHub for version control.
+                  Coursework and technical projects that explore engineering logic, automation ideas,
+                  and creative problem-solving.
                 </p>
                 <a
                   href="https://github.com/cmb84"
@@ -122,18 +124,19 @@
             </div>
           </div>
 
+          <!-- Project 3 -->
           <div class="col-md-4">
             <div class="card h-100">
               <img
-                src="images/profile.jpg"
+                src="images/IT-project-3.jpg"
                 class="card-img-top img-fluid"
-                alt="Coding and experiments illustration"
+                alt="Developer working on code"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Practice & Experiments</h5>
+                <h5 class="card-title">Coding Practice & Experiments</h5>
                 <p class="card-text">
-                  Smaller exercises exploring layouts, responsive design, and JavaScript basics as I
-                  continue improving my coding skills.
+                  A collection of smaller coding exercises focusing on layouts, responsive design,
+                  JavaScript basics, and debugging workflows.
                 </p>
                 <a
                   href="https://github.com/cmb84"
@@ -146,9 +149,11 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </main>
+
     <footer class="bg-dark text-light text-center py-3 mt-auto site-footer">
       <div class="container">
         <span>&copy; 2025 Carlos Barrientos. All rights reserved.</span>
@@ -160,10 +165,9 @@
     </footer>
 
     <script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"
-></script>
-
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
