--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
                 alt="Rube Goldberg style engineering drawing"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Engineering & Automation Concepts</h5>
+                <h5 class="card-title">Engineering &amp; Automation Concepts</h5>
                 <p class="card-text">
                   Coursework and technical projects that explore engineering logic, automation ideas,
                   and creative problem-solving.
@@ -133,7 +133,7 @@
                 alt="Developer working on code"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Coding Practice & Experiments</h5>
+                <h5 class="card-title">Coding Practice &amp; Experiments</h5>
                 <p class="card-text">
                   A collection of smaller coding exercises focusing on layouts, responsive design,
                   JavaScript basics, and debugging workflows.
